--- a/views/check-out.ejs
+++ b/views/check-out.ejs
@@ -22,8 +22,18 @@
 </head>
 
 <body>
-    <!-- start header -->
+    <!-- loading animation -->
+    <div class="loader">
+        <span class="text">YKPO Café</span>
+        <span>
+            <div class="one"><i class="fa-solid fa-cookie"></i></div>
+            <div class="two"><i class="fa-solid fa-martini-glass-citrus"></i></div>
+            <div class="three"><i class="fa-solid fa-pizza-slice"></i></div>
+        </span>
+    </div>
+    <!--end loading animation -->
 
+    <!-- start header -->
     <div class="page-container">
         <!-- start header -->
         <div class="header">
@@ -123,16 +133,10 @@
         </div>
     </div>
     <!-- end footer -->
-    <!-- start preloading -->
-    <div class="loader">
-        <div class="one"></div>
-        <div class="two"></div>
-        <div class="three"></div>
-    </div>
-    <!-- end preloading -->
     <!-- connect javascript file -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/check-out.js"></script>
+    <script src="/js/loading.js"></script>
 </body>
 
 </html>
