--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,7 @@
   <title>Login</title>
   <!-- connect css file -->
   <link rel="stylesheet" href="/css/login-style.css" />
+  <link rel="stylesheet" href="/css/loading-style.css" />
   <!-- fontAwesome -->
   <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
   <!-- Google fonts -->
@@ -40,12 +41,16 @@
     </div>
   </div>
   <div class="loader">
-    <div class="one"></div>
-    <div class="two"></div>
-    <div class="three"></div>
+    <span class="text">YKPO Café</span>
+    <span>
+      <div class="one"><i class="fa-solid fa-cookie"></i></div>
+      <div class="two"><i class="fa-solid fa-martini-glass-citrus"></i></div>
+      <div class="three"><i class="fa-solid fa-pizza-slice"></i></div>
+    </span>
   </div>
   <!-- connect javascript file -->
   <script src="/js/login.js"></script>
+  <script src="/js/loading.js"></script>
 </body>
 
 </html>
