--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -21,6 +21,14 @@
 </head>
 
 <body>
+    <div class="loader">
+        <span class="text">YKPO Café</span>
+        <span>
+            <div class="one"><i class="fa-solid fa-cookie"></i></div>
+            <div class="two"><i class="fa-solid fa-martini-glass-citrus"></i></div>
+            <div class="three"><i class="fa-solid fa-pizza-slice"></i></div>
+        </span>
+    </div>
     <!-- start header -->
 
     <div class="page-container">
@@ -125,13 +133,7 @@
         </div>
     </div>
     <!-- end footer -->
-    <!-- start preloading -->
-    <div class="loader">
-        <div class="one"></div>
-        <div class="two"></div>
-        <div class="three"></div>
-    </div>
-    <!-- end preloading -->
+
     <!-- connect javascript file -->
     <script src="/js/menu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
