--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,6 +7,7 @@
   <title>SignUp</title>
   <!-- connect css file -->
   <link rel="stylesheet" href="/css/signup-style.css" />
+  <link rel="stylesheet" href="/css/loading-style.css" />
   <!-- fontawesome -->
   <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
   <!-- Google fonts -->
@@ -57,11 +58,15 @@
     </div>
   </div>
   <div class="loader">
-    <div class="one"></div>
-    <div class="two"></div>
-    <div class="three"></div>
+    <span class="text">YKPO Café</span>
+    <span>
+      <div class="one"><i class="fa-solid fa-cookie"></i></div>
+      <div class="two"><i class="fa-solid fa-martini-glass-citrus"></i></div>
+      <div class="three"><i class="fa-solid fa-pizza-slice"></i></div>
+    </span>
   </div>
   <!-- connect javascript file -->
+  <script src="/js/loading.js"></script>
   <script src="/js/signup.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
