--- a/css/admin-messages.css
+++ b/css/admin-messages.css
@@ -253,6 +253,7 @@ body {
   position: absolute;
   right: 0;
   box-shadow: var(--box-shadow);
+  padding: 0 0 0 15px;
 }
 /* content style for phones and medium screens */
 @media (max-width: 1200px) {
@@ -287,7 +288,7 @@ body {
   font-size: 20px;
   padding: 30px 10px;
   min-width: 370px;
-  width: 95%;
+  width: 97%;
   height: fit-content;
   display: flex;
   flex-direction: column;
