--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -21,14 +21,24 @@
 </head>
 
 <body>
+    <!-- start preloading -->
+    <div class="loader">
+        <span class="text">YKPO Café</span>
+        <span>
+            <div class="one"><i class="fa-solid fa-cookie"></i></div>
+            <div class="two"><i class="fa-solid fa-martini-glass-citrus"></i></div>
+            <div class="three"><i class="fa-solid fa-pizza-slice"></i></div>
+        </span>
+    </div>
+    <!-- end preloading -->
     <!-- start header -->
     <div class="header">
         <div class="header-container">
             <i class="fa-solid fa-bars" id="menu-icon"></i>
-            <span class="logo"><a href="/home">YKPO Cafe</a></span>
+            <span class="logo"><a href="/home">YKPO Café</a></span>
             <div class="right-header">
                 <div class="user-name">hey <span class="name">Admin</span></div>
-                <img class="user-img" src="/images/nigga.jpg" alt="">
+
             </div>
         </div>
     </div>
@@ -150,6 +160,7 @@
     </div>
     <!-- start preloading -->
     <div class="loader">
+        <span>YKPO Cafe</span>
         <div class="one"></div>
         <div class="two"></div>
         <div class="three"></div>
