--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -21,6 +21,17 @@
 </head>
 
 <body>
+    <!-- start preloading -->
+    <div class="loader">
+        <span class="text">YKPO Café</span>
+        <span>
+            <div class="one"><i class="fa-solid fa-cookie"></i></div>
+            <div class="two"><i class="fa-solid fa-martini-glass-citrus"></i></div>
+            <div class="three"><i class="fa-solid fa-pizza-slice"></i></div>
+        </span>
+    </div>
+    <!-- end preloading -->
+
     <!-- start header -->
     <div class="header">
         <div class="header-container">
@@ -29,7 +40,6 @@
             </span>
             <div class="right-header">
                 <div class="user-name">hey <span class="name">Admin</span></div>
-                <img class="user-img" src="/images/nigga.jpg" alt="">
             </div>
         </div>
     </div>
@@ -102,15 +112,10 @@
             </form>
         </div>
     </div>
-    <!-- start preloading -->
-    <div class="loader">
-        <div class="one"></div>
-        <div class="two"></div>
-        <div class="three"></div>
-    </div>
-    <!-- end preloading -->
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-users.js"></script>
+    <script src="/js/loading.js"></script>
 </body>
 
 </html>
