--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/css/footer-style.css">
   <link rel="stylesheet" href="/css/loading-style.css" />
   <link rel="stylesheet" href="/css/home-style.css" />
-  <link rel="stylesheet" href="/css/footer-style.css">
+
 
   <!-- fontawesome -->
   <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
@@ -22,6 +22,18 @@
 </head>
 
 <body>
+  <!-- start loading animation -->
+  <div class="loader">
+    <span class="text">YKPO Café</span>
+    <span>
+      <div class="one"><i class="fa-solid fa-cookie"></i></div>
+      <div class="two"><i class="fa-solid fa-martini-glass-citrus"></i></div>
+      <div class="three"><i class="fa-solid fa-pizza-slice"></i></div>
+    </span>
+  </div>
+  <!-- end loading animation -->
+
+
   <!-- start header -->
   <div class="header">
     <div class="header-container">
@@ -116,16 +128,10 @@
     </div>
   </div>
   <!-- end footer -->
-  <!-- start preloading -->
-  <div class="loader">
-    <div class="one"></div>
-    <div class="two"></div>
-    <div class="three"></div>
-  </div>
-  <!-- end preloading -->
 
   <!-- connect javascript file -->
   <script src="/js/home.js"></script>
+  <script src="/js/loading.js"></script>
 </body>
 
 </html>
