--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -22,6 +22,17 @@
 </head>
 
 <body>
+    <!-- loading animation -->
+    <div class="loader">
+        <span class="text">YKPO Café</span>
+        <span>
+            <div class="one"><i class="fa-solid fa-cookie"></i></div>
+            <div class="two"><i class="fa-solid fa-martini-glass-citrus"></i></div>
+            <div class="three"><i class="fa-solid fa-pizza-slice"></i></div>
+        </span>
+    </div>
+    <!-- end loading animation -->
+
     <!-- start header -->
     <div class="header">
         <div class="header-container">
@@ -102,6 +113,7 @@
     <!-- connect javascript file -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/reservation.js"></script>
+    <script src="/js/loading.js"></script>
 </body>
 
 </html>
