--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -21,6 +21,16 @@
 </head>
 
 <body>
+    <!-- start preloading -->
+    <div class="loader">
+        <span class="text">YKPO Café</span>
+        <span>
+            <div class="one"><i class="fa-solid fa-cookie"></i></div>
+            <div class="two"><i class="fa-solid fa-martini-glass-citrus"></i></div>
+            <div class="three"><i class="fa-solid fa-pizza-slice"></i></div>
+        </span>
+    </div>
+    <!-- end preloading -->
     <!-- start header -->
     <div class="header">
         <div class="header-container">
@@ -28,7 +38,6 @@
             <span class="logo"><a href="/home">YKPO Cafe</a></span>
             <div class="right-header">
                 <div class="user-name">hey </div>
-                <img class="user-img" src="/images/nigga.jpg" alt="">
             </div>
         </div>
     </div>
@@ -72,7 +81,7 @@
                 <div class="part btns">
                     <input type="button" value="delete account" class="delete-btn">
                     <input type="button" value="edit" class="edit-btn">
-                    <input type="button" value="Save" class="save-btn" onclick="updateData()"/>
+                    <input type="button" value="Save" class="save-btn" onclick="updateData()" />
                     <input type="button" value="cancel" class="cancel-btn">
                 </div>
                 <div class="change-password part ">
@@ -82,15 +91,9 @@
         </div>
     </div>
     <!-- end header -->
-    <!-- start preloading -->
-    <div class="loader">
-        <div class="one"></div>
-        <div class="two"></div>
-        <div class="three"></div>
-    </div>
-    <!-- end preloading -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/user-profile.js"></script>
+    <script src="/js/loading.js"></script>
 </body>
 
 </html>
