--- a/views/user/reservation.ejs
+++ b/views/user/reservation.ejs
@@ -21,6 +21,16 @@
 </head>
 
 <body>
+    <!-- start preloading -->
+    <div class="loader">
+        <span class="text">YKPO Café</span>
+        <span>
+            <div class="one"><i class="fa-solid fa-cookie"></i></div>
+            <div class="two"><i class="fa-solid fa-martini-glass-citrus"></i></div>
+            <div class="three"><i class="fa-solid fa-pizza-slice"></i></div>
+        </span>
+    </div>
+    <!-- end preloading -->
     <!-- start header -->
     <div class="header">
         <div class="header-container">
@@ -28,7 +38,6 @@
             <span class="logo"><a href="/home">YKPO Cafe</a></span>
             <div class="right-header">
                 <div class="user-name">hey <span class="name"></span></div>
-                <img class="user-img" src="/images/nigga.jpg" alt="">
             </div>
         </div>
     </div>
@@ -41,7 +50,8 @@
                 <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> Reservation</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
             </ul>
-            <button class="logout" onclick="logout()">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
+            <button class="logout" onclick="logout()">logout <i
+                    class="fa-solid fa-arrow-right-from-bracket"></i></button>
         </div>
         <div class="content">
             <h1 class="messages-title">
@@ -81,15 +91,10 @@
         </div>
     </div>
 
-    <!-- start preloading -->
-    <div class="loader">
-        <div class="one"></div>
-        <div class="two"></div>
-        <div class="three"></div>
-    </div>
-    <!-- end preloading -->
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/user-reservation.js"></script>
+    <script src="/js/loading.js"></script>
 </body>
 
 </html>
