--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,9 +37,9 @@
   <!-- start header -->
   <div class="header">
     <div class="header-container">
+      <i class="fa-solid fa-bars  burger-icon" onclick="activeLinks()"></i>
       <span class="logo">YKPO Cafe</span>
       <div class="links">
-        <i class="fa-solid fa-bars  burger-icon"></i>
         <ul>
           <li><a href="home">Home</a></li>
           <li><a href="menu">Menu</a></li>
@@ -132,6 +132,7 @@
   <!-- connect javascript file -->
   <script src="/js/home.js"></script>
   <script src="/js/loading.js"></script>
+  <script src="/js/header.js"></script>
 </body>
 
 </html>
