--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -30,61 +30,58 @@
         </span>
     </div>
     <!-- start header -->
-
-    <div class="page-container">
-        <!-- start header -->
-        <div class="header">
-            <div class="header-container">
-                <span class="logo">YKPO Cafe</span>
-                <div class="links">
-                    <i class="fa-solid fa-bars  burger-icon"></i>
-                    <ul>
-                        <li><a href="home">Home</a></li>
-                        <li><a href="menu">Menu</a></li>
-                        <li><a href="home#about">About</a></li>
-                        <li><a href="reservation">Book Table</a></li>
-                    </ul>
-                </div>
-                <div class="right-header">
-                    <a href="#" class="cart-icon"> <i class="fa-solid fa-cart-shopping"></i></a>
-                    <a href="login" class="login-icon" onclick="redirect()" id="loginIc">
-                        <i class="fa-regular fa-circle-user login-icon"></i>
-                    </a>
-                </div>
+    <div class="header">
+        <div class="header-container">
+            <i class="fa-solid fa-bars  burger-icon" onclick="activeLinks()"></i>
+            <span class="logo">YKPO Cafe</span>
+            <div class="links">
+                <ul>
+                    <li><a href="home">Home</a></li>
+                    <li><a href="menu">Menu</a></li>
+                    <li><a href="home#about">About</a></li>
+                    <li><a href="reservation">Book Table</a></li>
+                </ul>
+            </div>
+            <div class="right-header">
+                <a href="#" class="cart-icon"> <i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="login" class="login-icon" onclick="redirect()" id="loginIc">
+                    <i class="fa-regular fa-circle-user login-icon"></i>
+                </a>
             </div>
         </div>
-        <!-- end header -->
+    </div>
+    <!-- end header -->
 
-        <!-- start menu -->
-        <div class="menu">
-            <h2 class="menu-title">Menu <i class="fa-solid fa-utensils"></i></h2>
-            <div class="hot-drinks menu-section">
-                <h4>Hot Drinks <i class="fa-solid fa-mug-hot"></i></h4>
-                <div class="products ">
-                </div>
-            </div>
-
-            <div class="cold-drinks menu-section">
-                <h4>Cold Drinks <i class="fa-solid fa-martini-glass-empty"></i></h4>
-                <div class="products">
-
-                </div>
-            </div>
-            <div class="food menu-section ">
-                <h4>Food <i class="fa-solid fa-pizza-slice"></i></h4>
-                <div class="products">
-
-                </div>
-            </div>
-
-            <div class="dessert menu-section ">
-                <h4>Dessert <i class="fa-solid fa-cookie-bite"></i></h4>
-                <div class="products">
-
-                </div>
+    <!-- start menu -->
+    <div class="menu">
+        <h2 class="menu-title">Menu <i class="fa-solid fa-utensils"></i></h2>
+        <div class="hot-drinks menu-section">
+            <h4>Hot Drinks <i class="fa-solid fa-mug-hot"></i></h4>
+            <div class="products ">
             </div>
         </div>
-        <!-- end menu -->
+
+        <div class="cold-drinks menu-section">
+            <h4>Cold Drinks <i class="fa-solid fa-martini-glass-empty"></i></h4>
+            <div class="products">
+
+            </div>
+        </div>
+        <div class="food menu-section ">
+            <h4>Food <i class="fa-solid fa-pizza-slice"></i></h4>
+            <div class="products">
+
+            </div>
+        </div>
+
+        <div class="dessert menu-section ">
+            <h4>Dessert <i class="fa-solid fa-cookie-bite"></i></h4>
+            <div class="products">
+
+            </div>
+        </div>
+    </div>
+    <!-- end menu -->
     </div>
     <!-- start cart tag -->
     <div class="cart-tap">
@@ -136,6 +133,7 @@
 
     <!-- connect javascript file -->
     <script src="/js/menu.js"></script>
+    <script src="/js/header.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
