--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -36,9 +36,9 @@
     <!-- start header -->
     <div class="header">
         <div class="header-container">
+            <i class="fa-solid fa-bars  burger-icon" onclick="activeLinks()"></i>
             <span class="logo">YKPO Cafe</span>
             <div class="links">
-                <i class="fa-solid fa-bars  burger-icon"></i>
                 <ul>
                     <li><a href="home">Home</a></li>
                     <li><a href="menu">Menu</a></li>
@@ -47,7 +47,7 @@
                 </ul>
             </div>
             <div class="right-header">
-                <a href="login" class="login-icon" id="loginIc" onclick="redirect(event)">
+                <a href="login" class="login-icon" onclick="redirect()" id="loginIc">
                     <i class="fa-regular fa-circle-user login-icon"></i>
                 </a>
             </div>
@@ -114,6 +114,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/reservation.js"></script>
     <script src="/js/loading.js"></script>
+    <script src="/js/header.js"></script>
 </body>
 
 </html>
