--- a/css/header-style.css
+++ b/css/header-style.css
@@ -1,164 +1,163 @@
+/* start global varibales */
 :root {
-  --main-font: "Merienda";
-  --main-background-color: white;
-  --product-background-color: white;
-  --menu-background-color: #ddd;
-  --main-font-color: black;
-  --logo-font-size: 30px;
-  --description-color: #777;
-  --button-radius-deg: 20px;
-  --button-color: #ff7000;
-  --product-font-size: 18px;
-  --product-radius-deg: 15px;
-  --product-font: "Times New Roman", Times, serif;
+  --main-font: "Merienda", cursive;
+  --background-main-color: white;
+  --front-main-color: black;
+  --font-color: white;
+  --large-font-size: 30px;
+  --small-font-size: 14px;
+  --radius-deg: 18px;
+  --color-background: #f6f6f9;
+  --color-white: #fff;
+  --color-dark: #363949;
+  --color-light: rgba(132, 139, 200, 0.18);
+  --main-font: "Merienda", cursive;
+  --color-danger: #ff7782;
+  --color-success: #41f1b6;
+  --color-warning: #ffbb55;
+  /* --color-info-dark: #7d8da1; */
+  /* --color-info-light: #dce1eb; */
+  --color-primary-variant: #111e88;
+  --aside-links-size: 20px;
+  --aside-links-color: #8895a7;
+  --card-border-radius: 32px;
+  --border-radius-1: 6.4px;
+  --border-radius-2: 12.8px;
+  --border-radius-3: 19.2px;
+
+  --card-padding: 28.8px;
+  --padding-1: 19.2;
+  --statics-font: poppins, sans-serif;
+  --box-shadow: 0 32px 48px var(--color-light);
 }
+/* End global varibales */
+
 .header {
-  padding: 20px;
-  background-color: var(--main-background-color);
-  /* background-color: transparent; */
+  width: 100%;
+  height: 70px;
+  background-color: transparent;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  z-index: 2;
+}
+.header-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px;
 }
 .header .header-container .logo {
   font-family: var(--main-font);
-  font-size: var(--logo-font-size);
   font-weight: bold;
-  color: var(--main-font-color);
+  font-size: 25px;
+  color: var(--color-dark);
 }
-/* for  phones and tablets screens */
-@media (max-width: 860px) {
-  .header .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header .burger-icon {
+  display: none;
+}
+.header .links {
+  height: 100%;
+  width: 450px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.header ul li {
+  padding: 7px 15px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.header ul li a {
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  color: var(--color-dark);
+  font-family: var(--main-font);
+  font-size: 18px;
+  font-weight: 600;
+  padding: 5px;
+  /* border-bottom: 1px solid var(--color-dark); */
+  transition-duration: 0.5s;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
+}
+.header ul li:hover {
+  border-radius: 5px 5px 0px 0px;
+  -webkit-border-radius: 5px 5px 0px 0px;
+  -moz-border-radius: 5px 5px 0px 0px;
+  -ms-border-radius: 5px 5px 0px 0px;
+  -o-border-radius: 5px 5px 0px 0px;
+  box-shadow: var(--box-shadow);
+}
+.header ul li:hover a {
+  font-size: 20px;
+}
+.header .right-header a {
+  color: var(--color-dark);
+  font-size: 25px;
+  padding: 5px;
+}
+@media (max-width: 800px) {
+  .header .burger-icon {
+    display: block;
+    cursor: pointer;
   }
-
   .header .links {
-    position: relative;
-    transition: 0.5s;
-    display: flex;
-    align-items: center;
-    order: -1;
-  }
-  .header .right-header a {
-    color: var(--main-font-color);
-    font-size: var(--large-font-size);
-  }
-
-  .header .links ul {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-    position: absolute;
-    left: 0px;
-    top: calc(100% + 10px);
-    background-color: var(--main-font-color);
-    width: 250px;
-    transition-duration: 0.7s;
-    display: none;
-  }
-
-  .header .links:hover ul {
-    z-index: 1;
-  }
-
-  .header .links ul::before {
-    content: "";
-    position: absolute;
-    border-width: 10px;
-    border-style: solid;
-    border-color: red green blue black;
-    border-left-color: transparent;
-    border-right-color: transparent;
-    border-top-color: transparent;
-    border-bottom-color: var(--main-font-color);
-    top: -19px;
-    left: 0px;
-  }
-
-  .header .links ul li {
-    border-bottom: 2px solid var(--main-background-color);
-    font-family: var(--main-font);
-    font-weight: 600;
+    background-color: transparent;
+    top: -500px;
+    left: 0;
+    overflow: hidden;
+    width: 100% !important;
+    height: 300px !important;
+    position: fixed;
+    backdrop-filter: blur(20px);
+    box-shadow: var(--box-shadow);
     transition: 0.3s;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
     -ms-transition: 0.3s;
     -o-transition: 0.3s;
   }
-
-  .header .links ul li a {
-    display: block;
-    text-decoration: none;
-    color: var(--main-background-color);
-    padding: 15px;
-    transition: 0.3s;
-  }
-
-  .header .links ul li a:hover {
-    transform: translateX(15px);
-    color: var(--main-font-color);
-  }
-  .header .links ul li:hover {
-    background-color: var(--main-background-color);
-  }
-  .header .links .right-header a {
-    color: var(--main-font-color);
-    font-size: 25px;
-    padding-left: 15px;
-  }
-  .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .login-phone-btn {
-    display: block;
-  }
-  .cart-phone-btn {
-    display: block;
-  }
-}
-/* for large screens */
-@media (min-width: 861px) {
-  .header-container {
-    padding: 0 5%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .header .links .burger-icon {
-    display: none;
-  }
-  .header .links {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .header ul {
-    list-style-type: none;
-    display: flex;
+  .header .links ul {
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
   }
-  .header ul li {
-    padding: 7px 15px;
+  .active {
+    top: 70px !important;
   }
-  .header ul li a {
-    text-decoration: none;
-    color: var(--main-font-color);
-    font-family: var(--main-font);
-    font-size: 16px;
-    font-weight: 600;
-    padding: 10px 20px;
-    border-bottom: 2px solid var(--main-font-color);
-    transition-duration: 0.5s;
+  .active ul {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
   }
-  .header ul li a:hover {
-    background-color: var(--main-font-color);
-    color: var(--main-background-color);
-  }
-  .header .right-header a {
-    color: var(--main-font-color);
-    font-size: 25px;
-    margin-left: 10px;
+  .active ul li {
+    height: 25%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 }
