--- a/views/check-out.ejs
+++ b/views/check-out.ejs
@@ -38,9 +38,9 @@
         <!-- start header -->
         <div class="header">
             <div class="header-container">
+                <i class="fa-solid fa-bars  burger-icon" onclick="activeLinks()"></i>
                 <span class="logo">YKPO Cafe</span>
                 <div class="links">
-                    <i class="fa-solid fa-bars  burger-icon"></i>
                     <ul>
                         <li><a href="home">Home</a></li>
                         <li><a href="menu">Menu</a></li>
@@ -49,7 +49,6 @@
                     </ul>
                 </div>
                 <div class="right-header">
-
                     <a href="login" class="login-icon" onclick="redirect()" id="loginIc">
                         <i class="fa-regular fa-circle-user login-icon"></i>
                     </a>
@@ -137,6 +136,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/check-out.js"></script>
     <script src="/js/loading.js"></script>
+    <script src="/js/header.js"></script>
 </body>
 
 </html>
