--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -76,10 +76,10 @@
                         <span class="num"><span>0</span></span>
                     </p>
                 </div>
-                <div class="total-users">
+                <div class="total-resrvation">
                     <i class="fa-solid fa-users"></i>
                     <p class="title">
-                        total users
+                        total Reservation
                         <br>
                         <span class="num"><span>0</span></span>
                     </p>
