--- a/css/admin-dashboard.css
+++ b/css/admin-dashboard.css
@@ -147,7 +147,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 120px;
+  min-width: 120px;
+  width: fit-content;
 }
 .header .right-header .user-img {
   width: 60px;
