--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -98,6 +98,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-dashboard.js"></script>
     <script src="/js/loading.js"></script>
+    <script src="/js/admin-header.js"></script>
 </body>
 
 </html>
