--- a/views/admin/messages.ejs
+++ b/views/admin/messages.ejs
@@ -72,6 +72,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-messages.js"></script>
     <script src="/js/loading.js"></script>
+    <script src="/js/admin-header.js"></script>
 </body>
 
 </html>
