--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -69,6 +69,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-orders.js"></script>
     <script src="/js/loading.js"></script>
+    <script src="/js/admin-header.js"></script>
 </body>
 
 </html>
