--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -168,6 +168,7 @@
     <!-- end preloading -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-products.js"></script>
+    <script src="/js/admin-header.js"></script>
 </body>
 
 </html>
