--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -98,6 +98,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-profile.js"></script>
     <script src="/js/loading.js"></script>s
+    <script src="/js/admin-header.js"></script>s
 </body>
 
 </html>
