--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -116,6 +116,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-users.js"></script>
     <script src="/js/loading.js"></script>
+    <script src="/js/admin-header.js"></script>
 </body>
 
 </html>
