finishing signup page

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,6 +33,7 @@
           <i class="fa-solid fa-envelope"></i>
           <input type="email" name="email" class="email input-style" placeholder="Email" autocomplete="off" required
             oninput="checkEmail(event)" />
+          <p class="emailExist disaper">This email has already been used.</p>
         </div>
         <div class="username-container input-field-container">
           <i class="fa-solid fa-phone"></i>
