--- a/css/signup-style.css
+++ b/css/signup-style.css
@@ -162,6 +162,21 @@ a {
 .email {
   text-transform: lowercase;
 }
+.disaper {
+  display: none !important;
+}
+.emailExist {
+  width: 80% !important;
+  text-align: center;
+  font-size: 10px !important;
+  font-family: var(--statics-font) !important;
+  color: rgba(255, 0, 0, 0.8) !important;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
 
 .valid {
   border: 0.5px solid green;
