Change name in frontEnd

--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -87,6 +87,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/user-orders.js"></script>
     <script src="/js/loading.js"></script>
+    <script src="/js/update-name.js"></script>
 </body>
 
 </html>
