--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -37,7 +37,7 @@
             <i class="fa-solid fa-bars" id="menu-icon"></i>
             <span class="logo"><a href="/home">YKPO Cafe</a></span>
             <div class="right-header">
-                <div class="user-name">hey </div>
+                <div class="user-name">hey  <span class="name"></span></div>
             </div>
         </div>
     </div>
@@ -94,6 +94,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/user-profile.js"></script>
     <script src="/js/loading.js"></script>
+    <script src="/js/update-name.js"></script>
 </body>
 
 </html>
