--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -93,6 +93,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/user-dashboard.js"></script>
     <script src="/js/loading.js"></script>
+    <script src="/js/update-name.js"></script>
 </body>
 
 </html>
