--- a/views/user/reservation.ejs
+++ b/views/user/reservation.ejs
@@ -95,6 +95,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/user-reservation.js"></script>
     <script src="/js/loading.js"></script>
+    <script src="/js/update-name.js"></script>
 </body>
 
 </html>
