--- a/views/check-out.ejs
+++ b/views/check-out.ejs
@@ -68,7 +68,7 @@
                     <div class="total">
                         <div class="label">total </div>
                         <div class="price">
-                            <div class="number"></div>
+                            <div class="number">0</div>
                             <div class="sign">₪</div>
                         </div>
                     </div>
@@ -88,8 +88,10 @@
                             <label for="cod" class="cod-label">Cash on Delivery</label>
                         </div>
                         <div class="coins">
-                            <input type="radio" name="paymentRadio" class="disabled" id="coins" value="coins">
-                            <label for="coins" class="cod-label">Score</label>
+                            <input type="radio" name="paymentRadio" id="coinsR" value="coins" onclick="checkRadio()">
+                            <label for="coins" class="cod-label" id="coinsLabel">Score</label>
+                            <label for="coins" class="cod-label" id="coinsLabel-notEnough"
+                                onclick="checkRadio()"><del>Score</del></label>
                         </div>
                         <div class="submit-btn">
                             <input type="button" class="back" onclick="backFunc()" value="back">
