Score System is ready

--- a/views/check-out.ejs
+++ b/views/check-out.ejs
@@ -84,11 +84,11 @@
                         <input type="text" class="address2 input-style" placeholder="address 2 (optional)">
                         <label for="" class="method-payment">payment methods :</label>
                         <div class="cod">
-                            <input type="radio" name="paymentRadio" id="cod" value="cod" checked>
+                            <input type="radio" name="paymentRadio" id="cod" value="cod" class="Cash" checked >
                             <label for="cod" class="cod-label">Cash on Delivery</label>
                         </div>
                         <div class="coins">
-                            <input type="radio" name="paymentRadio" id="coinsR" value="coins" onclick="checkRadio()">
+                            <input type="radio" name="paymentRadio" id="coinsR" value="coins" class="Score" onclick="checkRadio()">
                             <label for="coins" class="cod-label" id="coinsLabel">Score</label>
                             <label for="coins" class="cod-label" id="coinsLabel-notEnough"
                                 onclick="checkRadio()"><del>Score</del></label>
