--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet" />
     <link rel="icon" href="/images/home.ico" />
-    <title>Admin Dashboard</title>
+    <title>Admin Products</title>
 </head>
 
 <body>
@@ -160,7 +160,7 @@
     </div>
     <!-- start preloading -->
     <div class="loader">
-        <span>YKPO Cafe</span>
+        <span>YKPO Café</span>
         <div class="one"></div>
         <div class="two"></div>
         <div class="three"></div>
