--- a/views/check-out.ejs
+++ b/views/check-out.ejs
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet" />
     <link rel="icon" href="/images/home.ico" />
-    <title>YKPO Cafe</title>
+    <title>YKPO Café</title>
 
 </head>
 
@@ -39,7 +39,7 @@
         <div class="header">
             <div class="header-container">
                 <i class="fa-solid fa-bars  burger-icon" onclick="activeLinks()"></i>
-                <span class="logo">YKPO Cafe</span>
+                <span class="logo">YKPO Café</span>
                 <div class="links">
                     <ul>
                         <li><a href="home">Home</a></li>
