--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -35,10 +35,10 @@
     <div class="header">
         <div class="header-container">
             <i class="fa-solid fa-bars" id="menu-icon"></i>
-            <span class="logo"><a href="/home">YKPO Cafe</a>
+            <span class="logo"><a href="/home">YKPO Café</a>
             </span>
             <div class="right-header">
-                <div class="user-name">hey <span class="name">Admin</span></div>
+                <div class="user-name">hey <span class="name"></span></div>
 
             </div>
         </div>
