--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet" />
     <link rel="icon" href="/images/home.ico" />
-    <title>Admin Dashboard</title>
+    <title>User Profile</title>
 </head>
 
 <body>
@@ -35,7 +35,7 @@
     <div class="header">
         <div class="header-container">
             <i class="fa-solid fa-bars" id="menu-icon"></i>
-            <span class="logo"><a href="/home">YKPO Cafe</a></span>
+            <span class="logo"><a href="/home">YKPO Café</a></span>
             <div class="right-header">
                 <div class="user-name">hey  <span class="name"></span></div>
             </div>
